--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       </a>
       <ul class="burger__menu">
         <li><a href="./index.html">HOME</a></li>
-        <li><a href="#">SARNIES</a></li>
+        <li><a href="./page2.html">SARNIES</a></li>
         <li><a href="./contact.html">CONTACT</a></li>
       </ul>
     </nav>
